--- a/Вебинар 6. Пакеты и модули/task1/task-info.yaml
+++ b/Вебинар 6. Пакеты и модули/task1/task-info.yaml
@@ -16,5 +16,9 @@ files:
   visible: false
   encrypted_text: BPrPxsoPO0ddRfXxWyDgbA==
   learner_created: false
+- name: paha.py
+  visible: true
+  encrypted_text: BPrPxsoPO0ddRfXxWyDgbA==
+  learner_created: true
 status: Unchecked
 record: -1
